Added ArrayQueue, UnionFind, BiggestSpenders