@@ -1,8 +1,5 @@
 package name.brian_gordon.collections.queues;
 
-import name.brian_gordon.collections.queues.factories.LinkedQueueFactory;
-import name.brian_gordon.collections.queues.factories.QueueFactory;
-import name.brian_gordon.collections.queues.factories.SynchronizedArrayQueueFactory;
 import org.junit.Assert;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -225,10 +222,10 @@ public class MultithreadedQueueTest {
     // runner reuses the same instance for every test!
 
     @Parameterized.Parameters
-    public static Collection<Object[]> factories() {
-        return Arrays.asList(
-                new Object[]{new SynchronizedArrayQueueFactory<Integer>(3)},
-                new Object[]{new SynchronizedArrayQueueFactory<Integer>(10)}
+    public static List<QueueFactory<Integer>[]> factories() {
+        return List.of(
+                new QueueFactory[] {() -> new SynchronizedArrayQueue<Integer>(3)},
+                new QueueFactory[] {() -> new SynchronizedArrayQueue<Integer>(10)}
         );
     }
 }
